feat: create 5.39.2 release notes

--- a/docs/release-notes/5.39.1/upgrade-guide.mdx
+++ b/docs/release-notes/5.39.1/upgrade-guide.mdx
@@ -1,18 +1,17 @@
 ---
-id: 40ac68cb
-title: Upgrade from 5.39.0 to 5.39.1
-description: Learn how to upgrade Webiny from 5.39.0 to 5.39.1.
+id: 809a794e
+title: Upgrade from 5.38.x to 5.39.1
+description: Learn how to upgrade Webiny from 5.38.x to 5.39.1.
 ---
 
 import { Alert } from "@/components/Alert";
 import { AdditionalNotes } from "@/components/upgrade/AdditionalNotes";
-import {WhatYouWillLearn} from "@/components/WhatYouWillLearn";
 
-<WhatYouWillLearn>
+<Alert type="success" title="What you’ll learn">
 
-  - how to upgrade Webiny from 5.39.0 to 5.39.1
+- how to upgrade Webiny from 5.38.x to 5.39.1
 
-</WhatYouWillLearn>
+</Alert>
 
 <Alert type="info">
 
@@ -35,9 +34,9 @@ Once the upgrade has finished, running the `yarn webiny --version` command in yo
 
 ### 2. Run the Upgrade Command (If Upgrading from 5.38.x)
 
-In case you are upgrading to **5.39.1** from **5.38.x**, you must upgrade your project files. Depending on your project, you might also need to perform a couple of manual steps.
+In case you are upgrading to **5.39.1** from **5.38.x**, you must upgrade your project. Depending on your project, you might also need to perform a couple of manual steps.
 
-Before proceeding with the next step, make sure to check the [2. Run the Upgrade Command](/docs/release-notes/5.39.0/upgrade-guide#2-run-the-upgrade-command) section of the [Upgrade From 5.38.x to 5.39.0](/docs/guides/upgrade/5.38.x-to-5.39.0) upgrade guide.
+Before proceeding with the next step, make sure to check the [2. Run the Upgrade Command](/docs/release-notes/5.39.0/upgrade-guide#2-run-the-upgrade-command) section of the [Upgrade From 5.38.x to 5.39.0](/docs/release-notes/5.39.0/upgrade-guide) upgrade guide.
 
 ### 3. Deploy Your Project
 
