--- a/docs/release-notes/5.39.2/upgrade-guide.mdx
+++ b/docs/release-notes/5.39.2/upgrade-guide.mdx
@@ -1,23 +1,22 @@
 ---
-id: 77bd4c76
-title: Upgrade from 5.39.1 to 5.39.2
-description: Learn how to upgrade Webiny from 5.39.1 to 5.39.2.
+id: 809a794e
+title: Upgrade from 5.38.x to 5.39.2
+description: Learn how to upgrade Webiny from 5.38.x to 5.39.2.
 ---
 
 import { Alert } from "@/components/Alert";
 import { AdditionalNotes } from "@/components/upgrade/AdditionalNotes";
-import {WhatYouWillLearn} from "@/components/WhatYouWillLearn";
 
-<WhatYouWillLearn>
+<Alert type="success" title="What you’ll learn">
 
-  - how to upgrade Webiny from 5.39.1 to 5.39.2
+  - how to upgrade Webiny from 5.38.x to 5.39.2
 
-</WhatYouWillLearn>
+</Alert>
 
 <Alert type="info">
 
-Make sure to check out the [5.39.2 changelog](./changelog) to get familiar with the changes introduced in this
-release.
+  Make sure to check out the [5.39.2 changelog](./changelog) to get familiar with the changes introduced in this
+  release.
 
 </Alert>
 
@@ -35,9 +34,9 @@ Once the upgrade has finished, running the `yarn webiny --version` command in yo
 
 ### 2. Run the Upgrade Command (If Upgrading from 5.38.x)
 
-In case you are upgrading to **5.39.2** from **5.38.x**, you must upgrade your project files. Depending on your project, you might also need to perform a couple of manual steps.
+In case you are upgrading to **5.39.2** from **5.38.x**, you must upgrade your project. Depending on your project, you might also need to perform a couple of manual steps.
 
-Before proceeding with the next step, make sure to check the [2. Run the Upgrade Command](/docs/release-notes/5.39.1/upgrade-guide#2-run-the-upgrade-command) section of the [Upgrade From 5.38.x to 5.39.1](/docs/guides/upgrade/5.38.x-to-5.39.1) upgrade guide.
+Before proceeding with the next step, make sure to check the [2. Run the Upgrade Command](/docs/release-notes/5.39.0/upgrade-guide#2-run-the-upgrade-command) section of the [Upgrade From 5.38.x to 5.39.0](/docs/release-notes/5.39.0/upgrade-guide) upgrade guide.
 
 ### 3. Deploy Your Project
 
