fix: correct links

--- a/docs/release-notes/5.38.3/upgrade-guide.mdx
+++ b/docs/release-notes/5.38.3/upgrade-guide.mdx
@@ -36,7 +36,7 @@ Once the upgrade has finished, running the `yarn webiny --version` command in yo
 
 In case you are upgrading to **5.38.3** from **5.37.x**, you must upgrade your project. Depending on your project, you might also need to perform a couple of manual steps.
 
-Before proceeding with the next step, make sure to check the [2. Run the Upgrade Command](/docs/release-notes/5.38.0/upgrade-guide#2-run-the-upgrade-command) section of the [Upgrade From 5.37.x to 5.38.0](/docs/guides/upgrade/5.37.x-to-5.38.0) upgrade guide.
+Before proceeding with the next step, make sure to check the [2. Run the Upgrade Command](/docs/release-notes/5.38.0/upgrade-guide#2-run-the-upgrade-command) section of the [Upgrade From 5.37.x to 5.38.0](/docs/release-notes/5.38.0/upgrade-guide) upgrade guide.
 
 ### 3. Deploy Your Project
 
