fix: update changelog

--- a/docs/release-notes/5.39.2/changelog.mdx
+++ b/docs/release-notes/5.39.2/changelog.mdx
@@ -5,6 +5,7 @@ description: See what's new in Webiny version 5.39.2.
 ---
 
 import securityPermissions from "./assets/security-permissions.png";
+import emailWorks from "./assets/email-works.png";
 
 <GithubRelease version={"5.39.2"} />
 
@@ -111,6 +112,12 @@ new CmsGraphQLSchemaPlugin<Context>({
 #### Deprecation Notice
 
 Note that the new `accessControl` property is a successor to the existing `permissions` property, which is now deprecated and will be removed in the upcoming 5.40.0 quarterly release. We will address and further document this change in the upcoming release notes.
+
+### E-mail Validator - Allow `+` Character In E-mail Addresses ([#3907](https://github.com/webiny/webiny-js/pull/3907))
+
+We've addressed an issue with the built-in email validator, which would not allow the `+` character in the email addresses. This issue has been resolved, and the email validator now correctly allows the `+` character in the email addresses.
+
+<Image src={emailWorks} alt={'E-mail Validator - Allow "+" Character In E-mail Addresses'} />
 
 ## Folder Level Permissions (FLP)
 
