fix: update changelog

--- a/docs/release-notes/5.39.2/changelog.mdx
+++ b/docs/release-notes/5.39.2/changelog.mdx
@@ -115,7 +115,9 @@ Note that the new `accessControl` property is a successor to the existing `permi
 
 ### E-mail Validator - Allow `+` Character In E-mail Addresses ([#3907](https://github.com/webiny/webiny-js/pull/3907))
 
-We've addressed an issue with the built-in email validator, which would not allow the `+` character in the email addresses. This issue has been resolved, and the email validator now correctly allows the `+` character in the email addresses.
+We've addressed an issue with the built-in e-mail validator, which would not allow the `+` character to be present in an e-mail address. 
+
+This issue has been resolved, and the validator now correctly allows the `+` character in an e-mail address.
 
 <Image src={emailWorks} alt={'E-mail Validator - Allow "+" Character In E-mail Addresses'} />
 
