docs: renamed createPrivateModelDefinition to createPrivateModel and used createModelField - a factory for model fields, which is mostly used when building models via code

--- a/docs/developer-docs/5.39.x/headless-cms/extending/private-models.mdx
+++ b/docs/developer-docs/5.39.x/headless-cms/extending/private-models.mdx
@@ -73,13 +73,12 @@ Now, create an `src` directory under the `packages/books` directory. We will wri
 
 ### Step 2: Define Model Definition
 
-Create a file (`book.model.ts`) where you define the private model for your content. This file includes the definition of the book model with fields like `title` and `price`, along with their respective validations. We will utilize the `createPrivateModelDefinition` utility for this.
+Create a file (`book.model.ts`) where you define the private model for your content. This file includes the definition of the book model with fields like `title` and `price`, along with their respective validations. We will utilize the `createPrivateModel` utility for this.
 
 Please create these two files in the `packages/books/src` directory.
 
 ```tsx book.model.ts
-import { createPrivateModelDefinition } from "@webiny/api-headless-cms";
-import { createModelField } from "./createModelField";
+import { createPrivateModel, createModelField } from "@webiny/api-headless-cms";
 
 const required = () => {
     return {
@@ -92,7 +91,7 @@ export const BOOK_MODEL_ID = "pvBook";
 
 export const createBookModelDefinition = () => {
 
-    return createPrivateModelDefinition({
+    return createPrivateModel({
         name: "PvBook",
         modelId: BOOK_MODEL_ID,
         titleFieldId: "title",
@@ -112,51 +111,6 @@ export const createBookModelDefinition = () => {
         ]
     });
 };
-```
-
-And now create a file `src/createModelField.ts` containing a utility function for creating model fields.
-
-```tsx createModelField.ts
-import { CmsModelField } from "@webiny/api-headless-cms/types";
-
-export interface CreateModelFieldParams
-    extends Omit<CmsModelField, "id" | "storageId" | "fieldId"> {
-    fieldId?: string;
-}
-
-export const createModelField = (params: CreateModelFieldParams): CmsModelField => {
-    const {
-        label,
-        fieldId: initialFieldId,
-        type,
-        tags,
-        settings = {},
-        listValidation = [],
-        validation = [],
-        multipleValues = false,
-        predefinedValues = {
-            values: [],
-            enabled: false
-        }
-    } = params;
-
-    const fieldId = initialFieldId ? initialFieldId : label;
-
-    return {
-        id: fieldId,
-        storageId: `${type}@${fieldId}`,
-        fieldId,
-        label,
-        type,
-        settings,
-        tags,
-        listValidation,
-        validation,
-        multipleValues,
-        predefinedValues
-    };
-};
-
 ```
 
 ### Step 3: Implement CRUD Operations
