docs: add 5.39.3 release notes

--- a/docs/release-notes/5.39.3/changelog.mdx
+++ b/docs/release-notes/5.39.3/changelog.mdx
@@ -6,6 +6,18 @@ description: See what's new in Webiny version 5.39.3.
 
 <GithubRelease version={"5.39.3"} />
 
+## File Manager
+### Enhance Filtering Mechanism ([#3978](https://github.com/webiny/webiny-js/pull/3978))
+
+In this release, we have refined the filtering behavior within the File Manager. Previously, when the user reset all filters, the files were loaded without specifying the folder location.
+
+Now, with the updated logic, if no filters are set or contain undefined values, entries will be loaded based on their respective locations.
+
+## Page Builder
+### Fix Missing Actions in Page Details Drawer ([#3982](https://github.com/webiny/webiny-js/pull/3982))
+
+This update effectively resolves an issue encountered when AACL (Advanced Access Control Layer) is enabled. Specifically, it addresses a situation where pages located within the root folder inadvertently caused certain actions within the Page Details drawer to disappear.
+
 ## Other
 
 ### Webiny CLI - Updated Internal Dependencies ([#3986](https://github.com/webiny/webiny-js/pull/3986))
