feat: add page builder export and import changelog

--- a/docs/release-notes/5.39.3/changelog.mdx
+++ b/docs/release-notes/5.39.3/changelog.mdx
@@ -4,6 +4,8 @@ title: Webiny 5.39.3 Changelog
 description: See what's new in Webiny version 5.39.3.
 ---
 
+import { GithubRelease } from "@/components/GithubRelease";
+
 <GithubRelease version={"5.39.3"} />
 
 ## File Manager
@@ -27,3 +29,18 @@ We've received multiple reports of new users not being able to build and access 
 After a quick investigation, we've found that the issue was caused because of a number of updates that happened within [Browserify](https://github.com/browserify/browserify) packages, which Webiny uses internally when building mentioned apps.
 
 The issues have been addressed and both **Admin Area** and **Website** frontend apps should now build and work as expected.
+
+
+## Page Builder
+
+### Export and Import Pages ([#3851](https://github.com/webiny/webiny-js/pull/3851))
+
+In this release, we have improved the export and import of pages functionality. In releases before this one, users could not export more than 16 pages due a limitation of self-calling Lambda runs, introduced by AWS recently.
+
+On the export side, we tested the export for around 500-600 pages, and it takes ~3 minutes to complete. The total size of the pages file, zipped, is around 400MB. Of course, these were our test pages. Users can have larger or smaller pages, so the zip file will vary in size.
+
+On the import side, there is a limitation of ~450MB for the zip file size, which we will improve in our future releases.
+
+This functionality now uses Background Tasks, introduced in the Webiny 5.39.0 version, as an experimental feature.
+
+
