--- a/docs/release-notes/5.39.3/changelog.mdx
+++ b/docs/release-notes/5.39.3/changelog.mdx
@@ -26,7 +26,7 @@ On the import side, there is a limitation of ~450MB for the ZIP file size, which
 
 ### Enhance Filtering Mechanism ([#3978](https://github.com/webiny/webiny-js/pull/3978))
 
-In this release, we have refined the filtering behavior within the File Manager. Previously, when the user reset all filters, the files were loaded without specifying the folder location.
+In this release, we have refined the filtering behaviour within the File Manager. Previously, when the user reset all filters, the files were loaded without specifying the folder location.
 
 Now, with the updated logic, if no filters are set or contain undefined values, entries will be loaded based on their respective locations.
 
