--- a/docs/developer-docs/5.39.x/get-started/install-webiny.mdx
+++ b/docs/developer-docs/5.39.x/get-started/install-webiny.mdx
@@ -19,9 +19,9 @@ import { Alert } from "@/components/Alert";
 
 Before proceeding, make sure you have the following:
 
-1. **Node.js >=18**
+1. **Node.js ^18 || ^20**
 
-- Node.js versions **v18.19.0** or greater
+- Webiny works with Node.js versions **18** or **20**
 - If you don't have Node.js installed, the easiest way to install it is by [downloading the official binary](https://nodejs.org/en/)
 
 2. **yarn ^1.22.21 || >=2**
