feat: create 5.40.0 release notes

--- a/docs/release-notes/5.40.0/changelog.mdx
+++ b/docs/release-notes/5.40.0/changelog.mdx
@@ -10,9 +10,13 @@ import { GithubRelease } from "@/components/GithubRelease";
 
 ## Breaking Changes❗
 
-### Removed Deprecated Code ([#4051](https://github.com/webiny/webiny-js/pull/4051))
+### Removed Deprecated APIs ([#4051](https://github.com/webiny/webiny-js/pull/4051))
 
-✍️
+With this release, we've removed a couple of backend JavaScript APIs that were marked as deprecated in previous releases. 
+
+Essentially, we've removed a couple of older methods used for subscribing to lifecycle events and also for performing Headless CMS-related security permissions checks. 
+
+For more information and how to migrate your code, please refer to the separate [Deprecated APIs](/docs/release-notes/5.40.0/deprecated-apis) article.
 
 ## Other Improvements
 
