feat: create 5.40.0 release notes

--- a/docs/release-notes/5.40.0/changelog.mdx
+++ b/docs/release-notes/5.40.0/changelog.mdx
@@ -5,6 +5,12 @@ description: April 3rd, 2024
 ---
 
 import { GithubRelease } from "@/components/GithubRelease";
+import pulumiOutputHidden from "./assets/pulumi-output-hidden.png";
+import gracefulErrorHandling from "./assets/graceful-error-handling.png";
+import refreshedWebinyInfoCommand from "./assets/refreshed-webiny-info-command.png";
+import improvedWebinyAboutCommand from "./assets/improved-webiny-about-command.png";
+import alwaysShowingProjectDetails from "./assets/always-showing-project-details.png";
+import wcpBadgeInAdmin from "./assets/wcp-badge-in-admin.png";
 
 <GithubRelease version={"5.40.0"} />
 
@@ -12,9 +18,9 @@ import { GithubRelease } from "@/components/GithubRelease";
 
 ### Removed Deprecated APIs ([#4051](https://github.com/webiny/webiny-js/pull/4051))
 
-With this release, we've removed a couple of backend JavaScript APIs that were marked as deprecated in previous releases. 
+With this release, we've removed a couple of backend JavaScript APIs that were marked as deprecated in previous releases.
 
-Essentially, we've removed a couple of older methods used for subscribing to lifecycle events and also for performing Headless CMS-related security permissions checks. 
+Essentially, we've removed a couple of older methods used for subscribing to lifecycle events and also for performing Headless CMS-related security permissions checks.
 
 For more information and how to migrate your code, please refer to the separate [Deprecated APIs](/docs/release-notes/5.40.0/deprecated-apis) article.
 
@@ -22,4 +28,60 @@ For more information and how to migrate your code, please refer to the separate 
 
 ### Webiny CLI and `create-webiny-project` ([#4045](https://github.com/webiny/webiny-js/pull/4045))
 
-✍️
+With this release, we took some time to improve the [Webiny CLI](/docs/core-development-concepts/basics/webiny-cli) and the `create-webiny-project` CLI, which is used to create new Webiny projects. The focus was on improving the overall user experience and making the CLI tools more user-friendly.
+
+In the following sections, we cover some of the user-facing improvements that were made. For a full list of changes, check out the [linked pull request](https://github.com/webiny/webiny-js/pull/4045).
+
+#### Pulumi Output Hidden By Default
+
+When running the `webiny deploy` command, the Pulumi output is now hidden by default. This is to reduce the amount of noise in the terminal and to make the output more readable.
+
+<Image src={pulumiOutputHidden} title={"Pulumi Output Hidden By Default"} />
+
+If you still want to see the Pulumi output, you can use the `--deployment-logs` flag, for example:
+
+```bash
+yarn webiny deploy --deployment-logs
+```
+
+Note that no matter if the `--deployment-logs` flag was passed or not, the Pulumi output will always be shown in case of an error.
+
+#### Graceful Error Handling
+
+We've improved the error handling in the Webiny CLI. Now, when an error occurs, the CLI will display a more user-friendly error message, along with a suggestion on how to resolve the issue.
+
+<Image src={gracefulErrorHandling} title={"Graceful Error Handling"} />
+
+Note that, at the moment, only a handful of errors are covered by this improvement. We plan to expand this feature in future releases.
+
+#### Always Showing Project Details After A Full Deployment
+
+After a successful full project deployment, Webiny CLI will now always show the project details.
+
+<Image src={alwaysShowingProjectDetails} title={"Always Showing Project Details After A Full Deployment"} />
+
+Prior to this release, the project details would need to be fetched manually by running the `webiny info` command. This way, you can quickly see the project details after a deployment.
+
+#### Improved `webiny about` Command
+
+The [`webiny about`](/docs/core-development-concepts/basics/webiny-cli#yarn-webiny-about) command has been improved to provide more information about the Webiny project you're working on. The command now also includes the following information:
+
+1. the database setup the project is using
+2. user's current version of NPM.
+3. whether the command was run in a CI/CD environment
+
+<Image src={improvedWebinyAboutCommand} title={'Improved "webiny about" Command'} />
+
+#### Refreshed `webiny info` Command
+
+The [`webiny info`](/docs/core-development-concepts/basics/webiny-cli#yarn-webiny-info-env-env) command has been visually refreshed a bit.
+
+<Image src={refreshedWebinyInfoCommand} title={'Refreshed "webiny info" Command'} />
+
+### Webiny Control Panel (WCP) Badge In Admin App
+
+A small WCP badge was added to the main menu in the Admin application. 
+
+The badge is shown when your Webiny project is linked to the Webiny Control Panel (WCP). Also, by hovering over the badge, the project ID will be displayed in a tooltip. 
+
+<Image src={wcpBadgeInAdmin} title={"WCP Badge In Admin App"} />
